--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
         
         /* Vault discrepancy colors */
         .color-premium { color: var(--neon-red) !important; }
-        .color-discount { color: var(--badge-min-text) !important; } /* Using a cool blue/green for buy signals */
+        .color-discount { color: var(--badge-min-text) !important; } 
     </style>
 </head>
 <body>
@@ -244,7 +244,7 @@
                 <span class="data-label">TVL (Cross-pool):</span>
                 <span class="data-value" id="vlrm-oracle-liq-ada"><span class="loading">Waiting...</span></span>
             </div>
-            </div>
+        </div>
 
         <div class="card">
             <div class="card-title" style="color: #fcd34d;">Relics Vault TVL 🏛️</div>
@@ -266,7 +266,7 @@
             <div class="card-title" style="margin-bottom: 20px;">ORACLE / ADA Comparison (Multi-DEX) ⚖️</div>
             <div style="display: grid; grid-template-columns: repeat(auto-fit, minmax(200px, 1fr)); gap: 20px;">
                 <div>
-                    <h3 class="dex-subtitle"><span class="badge bg-vyfi">VyFi DEX</span></h3>
+                    <h3 class="dex-subtitle"><span class="badge bg-vyfi">VYFI</span></h3>
                     <div class="data-row">
                         <span class="data-label">Price:</span>
                         <span class="data-value" id="oracle-vyfi-price">-</span>
@@ -278,7 +278,7 @@
                 </div>
 
                 <div style="border-left: 2px solid rgba(255,255,255,0.1); padding-left: 20px;">
-                    <h3 class="dex-subtitle"><span class="badge bg-minswap">Minswap V2</span></h3>
+                    <h3 class="dex-subtitle"><span class="badge bg-minswap">MINSWAP</span></h3>
                     <div class="data-row">
                         <span class="data-label">Price:</span>
                         <span class="data-value" id="oracle-min-price">-</span>
@@ -453,11 +453,13 @@
                 actionEl.innerHTML = `<span style="color: rgba(255, 255, 255, 0.6); font-size: 0.85rem;">Low spread. Doesn't cover fees.</span>`;
             } else if (priceVyfi > priceMinswap) {
                 spreadEl.style.color = "#ffffff"; 
-                actionEl.innerHTML = `Buy <span class="badge-dark">Min</span> ➔ Sell <span class="badge-dark">Vy</span>`;
+                // Updated Short texts to full names here
+                actionEl.innerHTML = `Buy <span class="badge-dark">Minswap</span> ➔ Sell <span class="badge-dark">VyFi</span>`;
                 suggestedActionText = "Buy on Minswap, Sell on VyFi";
             } else {
                 spreadEl.style.color = "#ffffff";
-                actionEl.innerHTML = `Buy <span class="badge-dark">Vy</span> ➔ Sell <span class="badge-dark">Min</span>`;
+                // Updated Short texts to full names here
+                actionEl.innerHTML = `Buy <span class="badge-dark">VyFi</span> ➔ Sell <span class="badge-dark">Minswap</span>`;
                 suggestedActionText = "Buy on VyFi, Sell on Minswap";
             }
 
