--- a/index.html
+++ b/index.html
@@ -187,7 +187,7 @@
                 </div>
 
                 <div class="arbitrage-box" style="border: 1px solid rgba(255,255,255,0.1);">
-                    <div class="arbitrage-label" style="color: #10b981; margin-bottom: 8px;">Real Net Profit Simulator</div>
+                    <div class="arbitrage-label" style="color: #10b981; margin-bottom: 8px;">Net Profit Simulator ORACLE / ADA</div>
                     <div style="display: flex; justify-content: space-between; align-items: center;">
                         <div>
                             <div class="arbitrage-label">Investment</div>
