--- a/index.html
+++ b/index.html
@@ -306,7 +306,7 @@
     </div>
 
     <script>
-        const PROXY_URL = 'https://cardano-dex-proxy.seryibull.workers.dev';
+        const PROXY_URL = 'https://l4va.seryibull.workers.dev';
         const VLRM = "63efb704b7396890e4d9539d030c0e667739043add65c00f96c586c056616c6f72756d";
         const ORACLE = "328a18bac517630826a106bff1a55caf455de84cdba98416f8e093b27393c37310950f58596be5013b942d52accb931c2800cf132db36fb5fd7d71c4";
         const ORACLE_TOTAL_SUPPLY = 1000000;
