--- a/index.html
+++ b/index.html
@@ -179,7 +179,7 @@
                 </div>
 
                 <div class="arbitrage-box">
-                    <div class="arbitrage-label" style="color: #fcd34d; margin-bottom: 8px;">Relics Vault arbitrage opportunity (ORACLE)</div>
+                    <div class="arbitrage-label" style="color: #fcd34d; margin-bottom: 8px;">VAULT RELICS FAIR PRICE (ORACLE)</div>
                     <div style="display: flex; justify-content: space-between;">
                         <div>
                             <div class="arbitrage-label">Discrepancy</div>
@@ -193,7 +193,7 @@
                 </div>
 
                 <div class="arbitrage-box" style="border: 1px solid rgba(255,255,255,0.1); display: flex; flex-direction: column; justify-content: center;">
-                    <div class="arbitrage-label" style="color: var(--neon-orange); margin-bottom: 8px;">NET PROFIT SIMULATOR (ORACLE)</div>
+                    <div class="arbitrage-label" style="color: var(--neon-orange); margin-bottom: 8px;">NET PROFIT ARBITRAGE SIMULATOR (ORACLE)</div>
                     <div style="display: flex; justify-content: space-between; align-items: flex-start;">
                         <div>
                             <div class="arbitrage-label" style="margin-bottom:5px;">Investment</div>
@@ -208,7 +208,7 @@
                 </div>
 
                 <div class="arbitrage-box" style="border: 1px solid rgba(255,255,255,0.1); display: flex; flex-direction: column; justify-content: center;">
-                    <div class="arbitrage-label" style="color: var(--neon-orange); margin-bottom: 8px;">NET PROFIT SIMULATOR TRIANGULAR</div>
+                    <div class="arbitrage-label" style="color: var(--neon-orange); margin-bottom: 8px;">NET PROFIT ARBITRAGE SIMULATOR TRIANGULAR</div>
                     <div style="display: flex; justify-content: space-between; align-items: flex-start;">
                         <div>
                             <div class="arbitrage-label" style="margin-bottom:5px;">Investment</div>
@@ -239,7 +239,7 @@
         <div class="card">
             <div class="card-title" style="color: #fcd34d;">Relics Vault TVL 🏛️</div>
             <div class="data-row">
-                <span class="data-label">Total Value (ADA):</span>
+                <span class="data-label">TVL:</span>
                 <span class="data-value">
                     <span id="vault-tvl"><span class="loading">Calculating...</span></span>
                     <span id="vault-change-24h" class="change-badge"></span>
@@ -263,7 +263,7 @@
         <div class="card">
             <div class="card-title">VLRM / ORACLE <span class="badge bg-vyfi">VyFi</span></div>
             <div class="data-row">
-                <span class="data-label">TVL (Cross-pool):</span>
+                <span class="data-label">TVL (Pool):</span>
                 <span class="data-value">
                     <span id="vlrm-oracle-liq-ada"><span class="loading">Waiting...</span></span> <span id="vlrm-oracle-change-24h" class="change-badge"></span>
                 </span>
@@ -330,7 +330,7 @@
         </div>
 
         <div class="card" style="grid-column: 1 / -1; padding: 15px;">
-            <div class="card-title" style="margin-bottom: 10px; font-size: 0.9rem;">Live Trend (Spread & Vault Discrepancy % - Last 24h)</div>
+            <div class="card-title" style="margin-bottom: 10px; font-size: 0.9rem;">SPREAD & VAULT DISCREPANCY (% Last 24h)</div>
             <div style="height: 200px; width: 100%;">
                 <canvas id="arbitrageChart"></canvas>
             </div>
