--- a/index.html
+++ b/index.html
@@ -96,18 +96,15 @@
         .card { border-radius: 20px; padding: 20px 25px; position: relative; background: rgba(18, 15, 36, 0.85); backdrop-filter: blur(10px); border: 1px solid rgba(255,255,255,0.05); box-shadow: 0 10px 30px rgba(0, 0, 0, 0.4); transition: transform 0.3s ease, box-shadow 0.3s ease; min-height: 280px; display: flex; flex-direction: column; justify-content: space-between;}
         .card:hover { transform: translateY(-3px); box-shadow: 0 15px 40px rgba(0, 0, 0, 0.6), 0 0 20px rgba(255, 123, 0, 0.15); border-color: rgba(255, 123, 0, 0.3); }
 
-        /* CODIFICACIÓN DE COLORES POR TEMÁTICA */
-        /* Tarjeta ADA Especial (Azul) */
-        .card-ada { background: rgba(35, 40, 65, 0.85); border-color: rgba(66, 133, 244, 0.2); }
-        .card-ada:hover { border-color: rgba(66, 133, 244, 0.5); box-shadow: 0 15px 40px rgba(0, 0, 0, 0.6), 0 0 20px rgba(66, 133, 244, 0.2); }
+        /* CODIFICACIÓN DE COLORES OSCURECIDA PARA MEJORAR CONTRASTE */
+        .card-ada { background: rgba(22, 26, 45, 0.9); border-color: rgba(66, 133, 244, 0.2); }
+        .card-ada:hover { border-color: rgba(66, 133, 244, 0.5); box-shadow: 0 15px 40px rgba(0, 0, 0, 0.6), 0 0 20px rgba(66, 133, 244, 0.2); background: rgba(26, 32, 55, 0.95); }
 
-        /* Tarjeta Vault Especial (Amarillo/Dorado) - Ahora también aplicada a ORACLE/ADA */
-        .card-vault { background: rgba(45, 35, 15, 0.85); border-color: rgba(252, 211, 77, 0.2); }
-        .card-vault:hover { border-color: rgba(252, 211, 77, 0.5); box-shadow: 0 15px 40px rgba(0, 0, 0, 0.6), 0 0 20px rgba(252, 211, 77, 0.2); }
+        .card-vault { background: rgba(32, 24, 12, 0.9); border-color: rgba(252, 211, 77, 0.2); }
+        .card-vault:hover { border-color: rgba(252, 211, 77, 0.5); box-shadow: 0 15px 40px rgba(0, 0, 0, 0.6), 0 0 20px rgba(252, 211, 77, 0.2); background: rgba(38, 28, 14, 0.95); }
 
-        /* NUEVO: Tarjeta Naranja Especial para VLRM y Triangular */
-        .card-orange { background: rgba(45, 25, 10, 0.85); border-color: rgba(255, 123, 0, 0.2); }
-        .card-orange:hover { border-color: rgba(255, 123, 0, 0.5); box-shadow: 0 15px 40px rgba(0, 0, 0, 0.6), 0 0 20px rgba(255, 123, 0, 0.2); }
+        .card-orange { background: rgba(32, 16, 8, 0.9); border-color: rgba(255, 123, 0, 0.2); }
+        .card-orange:hover { border-color: rgba(255, 123, 0, 0.5); box-shadow: 0 15px 40px rgba(0, 0, 0, 0.6), 0 0 20px rgba(255, 123, 0, 0.2); background: rgba(38, 19, 10, 0.95); }
 
         .card-title { font-size: 1.05rem; font-weight: 600; margin-bottom: 15px; color: var(--neon-orange); display: flex; justify-content: space-between; align-items: center; }
         .card-title.ada-title { color: var(--ada-color); text-shadow: 0 0 10px rgba(66, 133, 244, 0.3); }
@@ -468,14 +465,14 @@
         </div>
 
         <div class="card" style="grid-column: 1 / -1; padding: 15px; min-height: auto;">
-            <div class="card-title" style="margin-bottom: 10px; font-size: 0.9rem;">Spread & Vault Discrepancy (% last 24h)</div>
+            <div class="card-title" style="margin-bottom: 10px; font-size: 0.9rem; color: #ffffff;">Spread & Vault Discrepancy (% last 24h)</div>
             <div style="height: 200px; width: 100%;">
                 <canvas id="arbitrageChart"></canvas>
             </div>
         </div>
 
         <div class="card" style="grid-column: 1 / -1; padding: 20px 25px; min-height: auto;">
-            <div class="card-title" style="margin-bottom: 10px;">Opportunity Log (Daily Hunts) 📖</div>
+            <div class="card-title" style="margin-bottom: 10px; color: #ffffff;">Opportunity Log (Daily Hunts) 📖</div>
             <div id="opp-log" style="max-height: 250px; overflow-y: auto; padding-right: 10px;">
                 <div style="color: var(--text-secondary); text-align: center; padding: 20px; font-style: italic;">Waiting for high-spread opportunities...</div>
             </div>
