--- a/index.html
+++ b/index.html
@@ -96,15 +96,15 @@
         .card { border-radius: 20px; padding: 20px 25px; position: relative; background: rgba(18, 15, 36, 0.85); backdrop-filter: blur(10px); border: 1px solid rgba(255,255,255,0.05); box-shadow: 0 10px 30px rgba(0, 0, 0, 0.4); transition: transform 0.3s ease, box-shadow 0.3s ease; min-height: 280px; display: flex; flex-direction: column; justify-content: space-between;}
         .card:hover { transform: translateY(-3px); box-shadow: 0 15px 40px rgba(0, 0, 0, 0.6), 0 0 20px rgba(255, 123, 0, 0.15); border-color: rgba(255, 123, 0, 0.3); }
 
-        /* CODIFICACIÓN DE COLORES OSCURECIDA PARA MEJORAR CONTRASTE */
-        .card-ada { background: rgba(22, 26, 45, 0.9); border-color: rgba(66, 133, 244, 0.2); }
-        .card-ada:hover { border-color: rgba(66, 133, 244, 0.5); box-shadow: 0 15px 40px rgba(0, 0, 0, 0.6), 0 0 20px rgba(66, 133, 244, 0.2); background: rgba(26, 32, 55, 0.95); }
+        /* CODIFICACIÓN DE COLORES AL 95% DE OPACIDAD (Super Sólido) */
+        .card-ada { background: rgba(22, 26, 45, 0.95); border-color: rgba(66, 133, 244, 0.2); }
+        .card-ada:hover { border-color: rgba(66, 133, 244, 0.5); box-shadow: 0 15px 40px rgba(0, 0, 0, 0.6), 0 0 20px rgba(66, 133, 244, 0.2); background: rgba(26, 32, 55, 1); }
 
-        .card-vault { background: rgba(32, 24, 12, 0.9); border-color: rgba(252, 211, 77, 0.2); }
-        .card-vault:hover { border-color: rgba(252, 211, 77, 0.5); box-shadow: 0 15px 40px rgba(0, 0, 0, 0.6), 0 0 20px rgba(252, 211, 77, 0.2); background: rgba(38, 28, 14, 0.95); }
+        .card-vault { background: rgba(32, 24, 12, 0.95); border-color: rgba(252, 211, 77, 0.2); }
+        .card-vault:hover { border-color: rgba(252, 211, 77, 0.5); box-shadow: 0 15px 40px rgba(0, 0, 0, 0.6), 0 0 20px rgba(252, 211, 77, 0.2); background: rgba(38, 28, 14, 1); }
 
-        .card-orange { background: rgba(32, 16, 8, 0.9); border-color: rgba(255, 123, 0, 0.2); }
-        .card-orange:hover { border-color: rgba(255, 123, 0, 0.5); box-shadow: 0 15px 40px rgba(0, 0, 0, 0.6), 0 0 20px rgba(255, 123, 0, 0.2); background: rgba(38, 19, 10, 0.95); }
+        .card-orange { background: rgba(32, 16, 8, 0.95); border-color: rgba(255, 123, 0, 0.2); }
+        .card-orange:hover { border-color: rgba(255, 123, 0, 0.5); box-shadow: 0 15px 40px rgba(0, 0, 0, 0.6), 0 0 20px rgba(255, 123, 0, 0.2); background: rgba(38, 19, 10, 1); }
 
         .card-title { font-size: 1.05rem; font-weight: 600; margin-bottom: 15px; color: var(--neon-orange); display: flex; justify-content: space-between; align-items: center; }
         .card-title.ada-title { color: var(--ada-color); text-shadow: 0 0 10px rgba(66, 133, 244, 0.3); }
