--- a/index.html
+++ b/index.html
@@ -293,7 +293,7 @@
                 </div>
 
                 <div class="arbitrage-box" style="display: flex; flex-direction: column; justify-content: center;">
-                    <div class="arbitrage-label" style="color: var(--neon-orange); margin-bottom: 12px;">NET PROFIT SIMULATOR (ORACLE)</div>
+                    <div class="arbitrage-label" style="color: var(--vault-color); margin-bottom: 12px;">NET PROFIT SIMULATOR (ORACLE)</div>
                     <div style="display: flex; justify-content: space-between; align-items: flex-end;">
                         <div>
                             <div class="arbitrage-label" style="margin-bottom:5px;">Investment</div>
@@ -465,14 +465,14 @@
 
         </div>
 
-        <div class="card" style="grid-column: 1 / -1; padding: 15px; min-height: auto;">
+        <div class="card" style="grid-column: 1 / -1; padding: 15px; min-height: auto; background: rgba(10, 12, 20, 0.98);">
             <div class="card-title" style="margin-bottom: 10px; font-size: 0.9rem; color: #ffffff;">Spread & Vault Discrepancy (% last 24h)</div>
             <div style="height: 200px; width: 100%;">
                 <canvas id="arbitrageChart"></canvas>
             </div>
         </div>
 
-        <div class="card" style="grid-column: 1 / -1; padding: 20px 25px; min-height: auto;">
+        <div class="card" style="grid-column: 1 / -1; padding: 20px 25px; min-height: auto; background: rgba(10, 12, 20, 0.98);">
             <div class="card-title" style="margin-bottom: 10px; color: #ffffff;">Opportunity Log (Daily Hunts) 📖</div>
             <div id="opp-log" style="max-height: 250px; overflow-y: auto; padding-right: 10px;">
                 <div style="color: var(--text-secondary); text-align: center; padding: 20px; font-style: italic;">Waiting for high-spread opportunities...</div>
