--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
             min-height: 100vh; 
         }
 
-        /* 🔒 ESTILOS DEL ESCUDO API */
+        /* 🔒 ESTILOS DEL ESCUDO API (PANTALLA DE BLOQUEO) */
         #auth-screen {
             position: fixed; top: 0; left: 0; width: 100%; height: 100%;
             background: rgba(10, 8, 20, 0.95); backdrop-filter: blur(20px);
@@ -118,7 +118,7 @@
         /* Tarjetas compactas */
         .card-compact { min-height: 120px; }
 
-        /* CODIFICACIÓN DE COLORES (NUEVO: AÚN MÁS OSCUROS EL VAULT Y ORANGE) */
+        /* CODIFICACIÓN DE COLORES */
         .card-ada { background: rgba(12, 14, 24, 0.96); border-color: rgba(66, 133, 244, 0.2); }
         .card-ada:hover { border-color: rgba(66, 133, 244, 0.5); box-shadow: 0 15px 40px rgba(0, 0, 0, 0.6), 0 0 20px rgba(66, 133, 244, 0.2); background: rgba(16, 18, 30, 1); }
 
@@ -165,7 +165,7 @@
             -moz-appearance: textfield; 
         }
 
-        .sim-input { background: rgba(0,0,0,0.6); border: 1px solid rgba(255,255,255,0.2); color: white; padding: 8px 12px; border-radius: 10px; width: 80px; font-weight: bold; text-align: center; margin-right: 5px; font-family: 'Inter', sans-serif; font-size: 1rem;}
+        .sim-input { background: rgba(0,0,0,0.6); border: 1px solid rgba(255,255,255,0.2); color: white; border-radius: 10px; font-weight: bold; text-align: center; margin-right: 5px; font-family: 'Inter', sans-serif;}
         .sim-input:focus { outline: none; border-color: var(--neon-orange); box-shadow: 0 0 10px rgba(255, 123, 0, 0.2);}
         
         .profit-positive { color: #10b981; text-shadow: 0 2px 10px rgba(0,0,0,0.8); }
@@ -284,7 +284,7 @@
             <div class="card-title" style="color: var(--vault-color);">DEX ARBITRAGE (ORACLE / ADA)</div>
             <div style="display: flex; justify-content: space-between; align-items: center; margin-top: auto;">
                 <div class="data-row" style="margin: 0;">
-                    <span class="data-label" style="margin-right: 15px;">Optimal Spread:</span>
+                    <span class="data-label" style="margin-right: 15px;">Spread:</span>
                     <span class="data-value" id="arbitrage-spread" style="font-size: 1.5rem;">-%</span>
                 </div>
                 <div class="data-row" style="margin: 0;">
@@ -313,9 +313,8 @@
             
             <div style="display: flex; justify-content: space-between; align-items: flex-end; margin-top: auto; padding-bottom: 20px;">
                 <div class="data-row" style="margin: 0;">
-                    <span class="data-label" style="margin-right: 15px;">Investment:</span>
                     <div style="display: flex; align-items: center;">
-                        <input type="number" id="sim-ada-input" class="sim-input" value="1000" style="width: 140px; font-size: 1.3rem; padding: 12px;" onkeyup="recalculateSimulators()" onchange="recalculateSimulators()"> 
+                        <input type="number" id="sim-ada-input" class="sim-input" value="1000" style="width: 100px; font-size: 1.2rem; padding: 10px;" onkeyup="recalculateSimulators()" onchange="recalculateSimulators()"> 
                         <span style="font-size: 0.9rem; font-weight: bold; color: var(--text-primary);">ADA</span>
                     </div>
                 </div>
@@ -337,9 +336,8 @@
             <div class="card-title" style="color: var(--neon-orange);">NET PROFIT SIMULATOR TRIANGULAR (▲VLRM ORACLE ADA▼)</div>
             <div style="display: flex; justify-content: space-between; align-items: flex-end; margin-top: auto; padding-bottom: 20px;">
                 <div class="data-row" style="margin: 0;">
-                    <span class="data-label" style="margin-right: 15px;">Investment:</span>
                     <div style="display: flex; align-items: center;">
-                        <input type="number" id="sim-tri-input" class="sim-input" value="1000" style="width: 140px; font-size: 1.3rem; padding: 12px;" onkeyup="recalculateSimulators()" onchange="recalculateSimulators()"> 
+                        <input type="number" id="sim-tri-input" class="sim-input" value="1000" style="width: 100px; font-size: 1.2rem; padding: 10px;" onkeyup="recalculateSimulators()" onchange="recalculateSimulators()"> 
                         <span style="font-size: 0.9rem; font-weight: bold; color: var(--text-primary);">ADA</span>
                     </div>
                 </div>
@@ -359,7 +357,7 @@
 
         <div class="card card-ada drag-item" data-id="card-ada">
             <div>
-                <div class="card-title ada-title">Cardano (ADA) 💎</div>
+                <div class="card-title ada-title">Cardano (ADA)</div>
                 <div class="data-row">
                     <span class="data-label">Price USD:</span>
                     <span class="data-value" id="ada-price-usd">
@@ -1180,12 +1178,21 @@
                             if (bestDeviation > 0) {
                                 vaultBannerDiscEl.style.color = "#10b981"; 
                                 vaultActionEl.innerHTML = `<a href="${targetLink}" target="_blank" class="badge-dark">Sell ${targetDexForVault}</a>`; 
+                                vaultActionEl.style.color = "white";
                             } else {
                                 vaultBannerDiscEl.style.color = "var(--neon-red)"; 
                                 vaultActionEl.innerHTML = `<a href="${targetLink}" target="_blank" class="badge-dark">Buy ${targetDexForVault}</a>`; 
+                                vaultActionEl.style.color = "white";
                             }
                         }
 
+                        if (Math.abs(bestDeviation) >= conf.vaultAlert) {
+                            const alertToggle = document.getElementById('alert-toggle'); const now = Date.now();
+                            if (alertToggle && alertToggle.checked && (now - lastVaultAlertTime > ALERT_COOLDOWN)) {
+                                // No alert sound/TG
+                                lastVaultAlertTime = now;
+                            }
+                        }
                     }
                 } else {
                     document.getElementById('vault-tvl').innerText = `API Offline`; 
@@ -1207,7 +1214,7 @@
                         actionEl.innerHTML = `Low spread`;
                         actionEl.style.color = "rgba(255, 255, 255, 0.5)";
                     } else {
-                        spreadEl.style.color = "#10b981"; 
+                        spreadEl.style.color = "#ffffff";  // CAMBIO A COLOR BLANCO COMO PEDISTE
                         if (priceVyfi > priceMin) { actionEl.innerHTML = `<a href="${MINSWAP_LINK}" target="_blank" class="badge-dark">Buy Min</a> <a href="${VYFI_LINK}" target="_blank" class="badge-dark">Sell VyFi</a>`;  } 
                         else { actionEl.innerHTML = `<a href="${VYFI_LINK}" target="_blank" class="badge-dark">Buy VyFi</a> <a href="${MINSWAP_LINK}" target="_blank" class="badge-dark">Sell Min</a>`;  }
                     }
