--- a/index.html
+++ b/index.html
@@ -319,7 +319,7 @@
                     </div>
                 </div>
                 <div class="data-row" style="margin: 0;">
-                    <span class="data-label" style="margin-right: 15px; font-size: 0.8rem;">Net Return (2 Hops):</span>
+                    <span class="data-label" style="margin-right: 15px; font-size: 0.7rem; opacity: 0.7;">Net Return (2 Hops):</span>
                     <span class="data-value" id="sim-profit" style="font-size: 1.5rem;">- ADA</span>
                 </div>
             </div>
@@ -342,7 +342,7 @@
                     </div>
                 </div>
                 <div class="data-row" style="margin: 0;">
-                    <span class="data-label" style="margin-right: 15px; font-size: 0.8rem;">Net Return (3 Hops):</span>
+                    <span class="data-label" style="margin-right: 15px; font-size: 0.7rem; opacity: 0.7;">Net Return (3 Hops):</span>
                     <span class="data-value" id="sim-tri-profit" style="font-size: 1.5rem;">- ADA</span>
                 </div>
             </div>
@@ -688,7 +688,7 @@
                         x: { display: true, grid: { display: false }, ticks: { color: '#a0a0c0', maxTicksLimit: 8, maxRotation: 0 } }, 
                         y: { 
                             grid: { 
-                                color: (ctx) => ctx.tick && ctx.tick.value === 0 ? 'rgba(255, 255, 255, 0.6)' : 'rgba(255,255,255,0.05)',
+                                color: (ctx) => ctx.tick && ctx.tick.value === 0 ? '#ffffff' : 'rgba(255,255,255,0.05)',
                                 lineWidth: (ctx) => ctx.tick && ctx.tick.value === 0 ? 2 : 1,
                                 borderDash: (ctx) => ctx.tick && ctx.tick.value === 0 ? [5, 5] : []
                             }, 
